<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:src="@drawable/user_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/userStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/offline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/workTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/userStatus"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:id="@+id/userExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Experience"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="@+id/workTitle"
            app:layout_constraintEnd_toEndOf="@+id/sendCall"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/workTitle"
            app:layout_constraintTop_toBottomOf="@+id/userStatus" />

        <TextView
            android:id="@+id/bdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bd"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/workTitle"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/userBD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DB"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sendCall"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/bdTitle"
            app:layout_constraintTop_toBottomOf="@+id/userExperience"
            app:layout_constraintVertical_bias="0.02" />

        <Button
            android:id="@+id/sendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/bdTitle"
            app:layout_constraintVertical_bias="0.023" />

        <Button
            android:id="@+id/sendCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toEndOf="@+id/sendMessage"
            app:layout_constraintTop_toBottomOf="@+id/userBD"
            app:layout_constraintVertical_bias="0.034" />

        <TextView
            android:id="@+id/userDept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="User Department"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workDataTitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="FIO"
            android:textColor="#252424"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userAvatar" />

        <TextView
            android:id="@+id/userPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:maxLines="2"
            android:text="User Position"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userDept"
            app:layout_constraintVertical_bias="0.107" />

        <TextView
            android:id="@+id/achievementsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/achievements"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPosition"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/awardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/awards"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userAchievements" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="+7 999 999 99 99"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="@+id/phoneTitle"
            app:layout_constraintEnd_toEndOf="@+id/userStatus"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/phoneTitle" />

        <TextView
            android:id="@+id/contactsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contacts"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneTitle" />

        <TextView
            android:id="@+id/vkTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vk"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactsTitle" />

        <TextView
            android:id="@+id/userVK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="https://vk.com/tensor_company"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="@+id/vkTitle"
            app:layout_constraintEnd_toEndOf="@+id/userStatus"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vkTitle"
            app:layout_constraintTop_toBottomOf="@+id/userEmail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="example@ex.ru"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="@+id/emailTitle"
            app:layout_constraintEnd_toEndOf="@+id/userStatus"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/emailTitle"
            app:layout_constraintTop_toBottomOf="@+id/userPhone" />

        <TextView
            android:id="@+id/userAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            android:text="AchievementsList"
            android:textColor="#000"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievementsTitle" />

        <TextView
            android:id="@+id/userAwards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="AwardsList"
            android:textColor="#000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awardsTitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/workDataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/work_data"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vkTitle" />

        <TextView
            android:id="@+id/achievementsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expand"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/achievementsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toEndOf="@+id/achievementsTitle" />

        <TextView
            android:id="@+id/awardsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expand"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/awardsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toEndOf="@+id/awardsTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>